{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 196,
  "lineage": "9f301b65-5bc3-38e2-68c7-7cff2765c107",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs_application_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:302238252373:loadbalancer/app/ecs-elb/25ed889f4efdb0c6",
            "arn_suffix": "app/ecs-elb/25ed889f4efdb0c6",
            "dns_name": "ecs-elb-43598543.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:302238252373:loadbalancer/app/ecs-elb/25ed889f4efdb0c6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-elb",
            "security_groups": [
              "sg-0f5b3068051a531c4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0595cdab716d2abe5"
              },
              {
                "subnet_id": "subnet-07b411d45e6a92cde"
              }
            ],
            "subnets": [
              "subnet-0595cdab716d2abe5",
              "subnet-07b411d45e6a92cde"
            ],
            "vpc_id": "vpc-0b3f1517cdcc85aa3",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.ecs_lb_sg",
            "aws_subnet.Public_SN_1",
            "aws_subnet.Public_SN_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:internet-gateway/igw-00d075d43a5572c56",
            "id": "igw-00d075d43a5572c56",
            "owner_id": "302238252373",
            "tags": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:302238252373:listener/app/ecs-elb/25ed889f4efdb0c6/09dc3369125450ab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:302238252373:targetgroup/ecs-target-group/d77c3a225b072006",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:302238252373:listener/app/ecs-elb/25ed889f4efdb0c6/09dc3369125450ab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:302238252373:loadbalancer/app/ecs-elb/25ed889f4efdb0c6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.ecs_application_lb",
            "aws_lb_target_group.ecs_target_group",
            "aws_security_group.ecs_lb_sg",
            "aws_subnet.Public_SN_1",
            "aws_subnet.Public_SN_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:302238252373:targetgroup/ecs-target-group/d77c3a225b072006",
            "arn_suffix": "targetgroup/ecs-target-group/d77c3a225b072006",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:302238252373:targetgroup/ecs-target-group/d77c3a225b072006",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ed6e347b4a9df324",
            "owner_id": "302238252373",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d075d43a5572c56",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_SN_1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d6d56ebdcd7c72f",
            "route_table_id": "rtb-0ed6e347b4a9df324",
            "subnet_id": "subnet-0595cdab716d2abe5"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_SN_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_SN_2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ca15354866c98a0",
            "route_table_id": "rtb-0ed6e347b4a9df324",
            "subnet_id": "subnet-07b411d45e6a92cde"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_SN_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_SN_3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d0ed932a9e77f66",
            "route_table_id": "rtb-0ed6e347b4a9df324",
            "subnet_id": "subnet-001bd9da973dbc2cb"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_SN_3",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:security-group/sg-0e46ebea0a3d35247",
            "description": "security group for ECS Containers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e46ebea0a3d35247",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f5b3068051a531c4"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs_sg",
            "name_prefix": "",
            "owner_id": "302238252373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_security_group.ecs_lb_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_lb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:security-group/sg-0f5b3068051a531c4",
            "description": "security group for ecs load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5b3068051a531c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_lb_sg",
            "name_prefix": "",
            "owner_id": "302238252373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS_LB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:security-group/sg-0036e1a022a44569d",
            "description": "security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0036e1a022a44569d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb",
            "name_prefix": "",
            "owner_id": "302238252373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:security-group/sg-050808827f8da8031",
            "description": "security group for my instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050808827f8da8031",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0036e1a022a44569d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Instance-SG",
            "name_prefix": "",
            "owner_id": "302238252373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Instance-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_security_group.elb-securitygroup",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_SN_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-0ea15e51e360c837e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "70.0.4.0/24",
            "id": "subnet-0ea15e51e360c837e",
            "map_public_ip_on_launch": false,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Private_SN_1"
            },
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_SN_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-06150036a13a0f938",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "70.0.5.0/24",
            "id": "subnet-06150036a13a0f938",
            "map_public_ip_on_launch": false,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Private_SN_2"
            },
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_SN_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-0f51b0c90d8a8e9c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "70.0.6.0/24",
            "id": "subnet-0f51b0c90d8a8e9c2",
            "map_public_ip_on_launch": false,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Private_SN_3"
            },
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_SN_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-0595cdab716d2abe5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "70.0.1.0/24",
            "id": "subnet-0595cdab716d2abe5",
            "map_public_ip_on_launch": true,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Public_SN_1"
            },
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_SN_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-07b411d45e6a92cde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "70.0.2.0/24",
            "id": "subnet-07b411d45e6a92cde",
            "map_public_ip_on_launch": true,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Public_SN_2"
            },
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_SN_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-001bd9da973dbc2cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "70.0.3.0/24",
            "id": "subnet-001bd9da973dbc2cb",
            "map_public_ip_on_launch": true,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Public_SN_3"
            },
            "vpc_id": "vpc-0b3f1517cdcc85aa3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:vpc/vpc-0b3f1517cdcc85aa3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "70.0.0.0/16",
            "default_network_acl_id": "acl-03b520fa6e521cba2",
            "default_route_table_id": "rtb-03046e5a491f96151",
            "default_security_group_id": "sg-0383868fcd6ab3f3e",
            "dhcp_options_id": "dopt-15fb2a7e",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b3f1517cdcc85aa3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03046e5a491f96151",
            "owner_id": "302238252373",
            "tags": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}